--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>Calculatorr</title>
 </head>
 <style>
     #clear{
@@ -25,6 +25,8 @@ border-radius: 17px;
         width:210px;
         height:40px;
         border:solid black 2px;
+        
+
 
     }
 </style>
